--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "helmet": "^5.0.2",
     "mongoose": "^6.2.10",
     "regenerator-runtime": "^0.13.9",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
